# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.993.2.99 2010/01/20 04:24:27 mb Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.7 (2010/??/??)
 - (2010/01/20) Fixed bug#4780 - Adding groups to a CustomerUser fails,
    adding CustomerUsers to a group works.
 - (2010/01/20) Fixed bug#4486 - Some preferences displayed in AdminUser are not
    correct.
 - (2010/01/18) Fixed bug#4770 - Attachments are stripped/not shown from
    outgoing emails in some scenarios with ms exchange.
 - (2010/01/15) Fixed bug#4735 - TicketFreeTime search in Customer frontend
    does not work as expected
 - (2010/01/15) Fixed bug#4758 - Dashboard RSS feeds doesn't display XML
    encoded entities correctly.
 - (2010/01/13) Fixed bug#4754 - Multiple tickets with a huge POP3 Mailbox
    - more then 2000 email in the box ("Deep recursion on subroutine").
 - (2010/01/13) Fixed bug#4713 - In ticket overview, after adding view=30 - no
    tickets are visible.
 - (2010/01/12) Upgrade of cpan Net::IMAP::Simple from 1.17 to 1.1910.

2.4.6 (2010/01/12)
 - (2010/01/11) Fixed bug#4737 - Customer User update fails in 2.4.6 RC.
 - (2010/01/08) Fixed bug#4730 - Unable to open Admin > Attachments in IE8.
 - (2010/01/07) Fixed bug#4731 - Service and SLA gets translated after AJAX
    reload in Phone an Email Ticket.
 - (2010/01/05) Fixed bug#4718 - LDAP auth not possible with OTRS in iso-8859-1
    and utf-8 ldap directory.
 - (2010/01/05) Fixed bug#4708 - Added ArticleID to output of
    bin/otrs.getTicketThread.
 - (2010/01/04) Fixed bug#4704 - Package Manager: upload install fails with
    "Message: Need ContentType!" with Google Chrome browser.
 - (2009/12/30) Added Ukrainian language translation, thanks to Belskii Artem!