@@ -1,8 +1,8 @@
 # --
 # Kernel/Modules/AgentTicketCompose.pm - to compose and send a message
-# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
+# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketCompose.pm,v 1.81.2.2 2009/10/19 15:23:45 martin Exp $
+# $Id: AgentTicketCompose.pm,v 1.81.2.4 2010/01/25 11:06:23 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -24,7 +24,7 @@ use Kernel::System::TemplateGenerator;
 use Mail::Address;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.81.2.2 $) [1];
+$VERSION = qw($Revision: 1.81.2.4 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -350,6 +350,7 @@ sub Run {
                 ResponseFormat => $Self->{LayoutObject}->Ascii2Html( Text => $GetParam{Body} ),
                 Errors         => \%Error,
                 Attachments    => \@Attachments,
+                GetParam       => \%GetParam,
                 %Ticket,
                 %TicketFreeTextHTML,
                 %TicketFreeTimeHTML,
@@ -398,11 +399,18 @@ sub Run {
             # remove unused inline images
             my @NewAttachmentData = ();
             REMOVEINLINE:
-            for my $TmpAttachment (@AttachmentData) {
-                next REMOVEINLINE if $TmpAttachment->{ContentID}
-                        && $TmpAttachment->{ContentID} =~ /^inline/
-                        && $GetParam{Body} !~ /$TmpAttachment->{ContentID}/;
-                push @NewAttachmentData, \%{$TmpAttachment};
+            for my $Attachment (@AttachmentData) {
+                my $ContentID = $Attachment->{ContentID};
+                if ($ContentID) {
+                    my $ContentIDHTMLQuote = $Self->{LayoutObject}->Ascii2Html(
+                        Text => $ContentID,
+                    );
+                    next REMOVEINLINE
+                        if $GetParam{Body} !~ /(\Q$ContentIDHTMLQuote\E|\Q$ContentID\E)/i;
+                }
+
+                # remember inline images and normal attachments
+                push @NewAttachmentData, \%{$Attachment};
             }
             @AttachmentData = @NewAttachmentData;
 
